--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ jqueryParams.length&&$.each(jqueryParams,function(e,r){if("function"==typeof r){
 			  <div class="et_pb_menu__logo">
 				<br>
 				<br>
- <h2 style="font-family: 'Courier New', Courier, monospace;">sitename</h2>
+ <h2 style="font-family: 'Courier New', Courier, monospace;">kammerjaeger-Kutz</h4>
 	
 				</div>
 			</div>
