--- a/index.html
+++ b/index.html
@@ -1891,9 +1891,9 @@ jqueryParams.length&&$.each(jqueryParams,function(e,r){if("function"==typeof r){
 				<div class="et_pb_text_inner"><ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="#">Dienstleistungen</a></li>
-<li><a href="blog/index.html">Blog</a></li>
-<li><a href="contact-us/index.html">Contact</a></li>
-<li><a href="testimonials/index.html">Testimonials</a></li>
+<li><a href="#">Blog</a></li>
+<li><a href="#">Contact</a></li>
+<li><a href="#">Testimonials</a></li>
 </ul></div>
 			</div>
 			</div><div class="et_pb_column et_pb_column_1_5 et_pb_column_4_tb_footer  et_pb_css_mix_blend_mode_passthrough">
